--- a/signup.html
+++ b/signup.html
@@ -19,21 +19,17 @@
     <!-- iCheck -->
     <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  
   </head>
   <body class="hold-transition register-page">
     <div class="register-box">
       <div class="register-logo">
         <a href="../../index2.html"><b>Event </b>Planner</a>
+        <div id= 'msg'></div>
       </div>
 
       <div class="register-box-body">
-        <p class="login-box-msg">Register a new membership</p>
+        <p class="login-box-msg">Create an Account</p>
         <form>
           <div class="form-group has-feedback">
             <input type="text" id="fullName" class="form-control" placeholder="Full name">
@@ -48,7 +44,7 @@
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
-            <input type="password" id="repassword" class="form-control" placeholder="Retype password">
+            <input type="password" id="confirm" class="form-control" placeholder="Retype password">
             <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
           </div>
           <div class="row">
@@ -65,13 +61,8 @@
           </div>
         </form>
 
-      <!--  <div class="social-auth-links text-center">
-          <p>- OR -</p>
-          <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign up using Facebook</a>
-          <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign up using Google+</a>
-        </div> -->
 
-        <a href="login.html" class="text-center">I already have a membership</a>
+        <a href="login.html" class="text-center">I already have an acccount</a>
       </div><!-- /.form-box -->
     </div><!-- /.register-box -->
 
