--- a/signup.html
+++ b/signup.html
@@ -74,7 +74,7 @@
     <script src="plugins/iCheck/icheck.min.js"></script>
     <script src="js/helper.js"></script>
     <script src="js/signup.js"></script>
-    <script  src='checkbox.js'></script>
+    <script  src='js/checkbox.js'></script>
   </body>
 </html>
 
