--- a/event.html
+++ b/event.html
@@ -73,9 +73,7 @@
         <section class="sidebar">
           <!-- Sidebar user panel -->
           <div class="user-panel">
-          <div id='greet' style="color:white">
-            Welcome lade!
-          </div>
+          <div ><h5 id='greet'></h5></div>
             <div class="pull-left info">
               <p id="username"></p>
               <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
@@ -103,7 +101,7 @@
             <li class="active">
               <a href="#">
                 <i class="fa fa-calendar"></i> <span>Calendar</span>
-                <small class="label pull-right bg-red" id="rem">0</small>
+          *     <small class="label pull-right bg-red" id="rem">0</small>
               </a>
             </li>
             
@@ -156,7 +154,7 @@
                   <h3 class="box-title">Create Event</h3>
                 </div>
                 <div class="box-body">
-                  <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
+                 <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
                     <ul class="fc-color-picker" id="color-chooser">
                       <li><a class="text-aqua" href="#"><i class="fa fa-square"></i></a></li>
                       <li><a class="text-blue" href="#"><i class="fa fa-square"></i></a></li>
@@ -225,11 +223,9 @@
     <!-- fullCalendar 2.2.5 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
     <script src="plugins/fullcalendar/fullcalendar.min.js"></script>
-   <script src ="js/loadcalendar.js">
-    
-   
-     <script src="js/Helper.js"></script>
-    <script src="js/Event.js"></script>
+    <script src="js/helper.js"></script>
+    <script src="js/event.js"></script>
+    <script src ="js/loadcalendar.js"></script>
   </body>
 </html>
  
