add logout fix indentation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="hold-transition register-page">
     <div class="register-box">
       <div class="register-logo">
-        <a href="../../index2.html"><b>icalendr </b>Planner</a>
+        <a href="../../index2.html"><b>icalendra </b>Planner</a>
       </div>
 
       <div class="register-box-body">
